<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Metro4All</string>
    <string name="sHomepage">http://nextgis.org</string>
    <string name="sDetailpage">http://metro4all.org</string>

    <string name="about_app">This application calculates subway routes and shows you information about the barriers on the way. \n\nMore info at:</string>
    <string name="ga_text">This app collects and processes users\' performance data using Google Analytics. All data are depersonalized, strictly confidential and used to enhance app performance. You can disable this activity in Settings. \r\n\r\nPersonal data (email) sent through the report form are strictly for internal purposes and not being shared with third parties.</string>

    <string name="acknowledgements_caption">Licenses</string>
    <string name="acknowledgements_text" translatable="false">Icons \"Map\" and \"Layout\" are from <a href="http://icons8.com/android-icons">Icons8.com</a>, licensed under a <a href="http://creativecommons.org/licenses/by-nd/3.0/">CC BY-ND 3.0 license</a>\n\nApplication also uses libraries:\n<a href="http://code.google.com/p/androidsvg/">AndroidSVG</a>\n<a href="http://loopj.com/android-async-http">Asynchronous Http Client</a>\n<a href="http://github.com/osmdroid/osmdroid">osmdroid</a>\n<a href="http://github.com/nhaarman/supertooltips">SuperToolTips</a>\n\nEach library is licensed under a <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License 2.0</a></string>

	<string name="sSettings">Settings</string>
	<string name="sAbout">About</string>
	<string name="sNetworkGetErr">Getting data failed. Try to reload later.</string>
	<string name="sNetworkUnreachErr">Network is not available</string>
    <string name="sDownLoading">"Downloading: "</string>
    <string name="sDownLoadingCancelled">Downloading cancelled</string>
    <string name="sZipExtractionProcess">Extracting…</string>
    <string name="sSearching">Searching…</string>
	<string name="sNetworkInvalidData">Data is invalid. Please try to reload.</string>
	<string name="sFileNotFound">File not found</string>
	<string name="sCannotReadFile">Cannot read file</string>
	<string name="sCannotGetPath">Cannot find path</string>
	<string name="sInvalidCSVData">The csv data are invalid. Field count is wrong. File: </string>
	<string name="sNoOrEmptyData">No city downloaded or data is absent. Please try to reload city from settings.</string>
	<string name="sNoImage">There is no image or image is invalid. Please update the data.</string>

	<string name="sLocationFail">Cannot locate your device</string>
    <string name="sLocationDisabled">Location services disabled</string>
    <string name="sLocationDisabledMsg">Application needs access to your location. Please turn on location access.</string>
    <string name="sLocationAccuracy">Location accuracy</string>
	<string name="sLocationInaccuracy">You can improve the accuracy of your location by turning on:</string>
	<string name="sLocationStart">Locating…</string>
	<string name="sLocationGPS">GPS</string>
	<string name="sLocationNetwork">Wi-Fi and mobile network coordinates</string>
	<string name="sLocationNoCitySelected">No city selected</string>

	<string name="sSelectDataToDownload">Select data to download</string>
	<string name="sUpdateAvaliable">Data update is available</string>
	<string name="sDownload">Download</string>
	<string name="sDelete">Delete</string>
	<string name="sYes">Yes</string>
	<string name="sNo">No</string>
	<string name="sOk">OK</string>
	<string name="sCancel">Cancel</string>
	<string name="sQuestion">Update all data</string>
	<string name="sAreYouSure">Are you sure?</string>
	<string name="sSearch">Search</string>
	<string name="sFromStation">From</string>
	<string name="sToStation">To</string>
	<string name="sRoute">Option</string>
	<string name="sRoutingInfo">%1$s → Platform: %2$s\r\nTrains and Interchanges: %3$s\r\nPlatform → %4$s: %5$s</string>
	<string name="sSchema">%1$s of %2$s</string>
	<string name="sLayout">Layout</string>
    <string name="sLegend">Legend</string>
    <string name="sLocate">Locate</string>
    <string name="sMap">Map</string>
	<string name="sStationName">Station</string>
	<string name="sEntranceName">Entrance</string>
	<string name="sExitName">Exit</string>
    <string name="sStationPortalName">Station: %1$s\n%2$s%3$s</string>
    <string name="sNearestStation">Nearest station is %1$s</string>
    <string name="sInPortalMapTitle">Entrances of %1$s</string>
    <string name="sOutPortalMapTitle">Exits of %1$s</string>
	<string name="sNotSet">Not set</string>
	<string name="sSelFromStation">Select departure station</string>
	<string name="sSelToStation">Select arrival station</string>
	<string name="sBarriersExist">Barriers…</string>
	<string name="sBarriersConflict">You have a conflict with your parameters</string>
	<string name="sMaxWCWidth">Passway min width</string>
	<string name="sStairsCount">Steps total</string>
	<string name="sStairsEconomy">Steps saved by elevators, ramps and rails</string>
	<string name="sStairsLeft">Steps to climb</string>
	<string name="sStairsWORails">Of those, without rails or ramps</string>
	<string name="sLift">Elevator</string>
	<string name="sEscalator">Escalator</string>
	<string name="sLiftEconomy">Number of steps saved by elevator</string>
	<string name="sCM">cm</string>
	<string name="sKB">Kb</string>
	<string name="sMB">Mb</string>
	<string name="sMinRailWidth">Min distance between wheels</string>
	<string name="sMaxRailWidth">Max distance between wheels</string>
	<string name="sRailWidth">Distance between wheels</string>
	<string name="sMaxAngle">Max slope</string>
	<string name="sDownloadData">Download new data?</string>
	<string name="sDeleteData">Delete existing data?</string>
	<string name="sDeleting">Deleting…</string>
	<string name="sConflictNotes">Exits that conflict with set limitations are shown in red</string>
	<string name="sLimits">My mobility requirements</string>
	<string name="sLimitsSet">Set my mobility requirements</string>
	<string name="sLimitsHave">My mobility requirements</string>
	<string name="sSummary">Route summary</string>
	<string name="sSummaryClick">Details…</string>
	<string name="sNoPortals">There are no working entrances or exits now.</string>
	<string name="sToolTipPortalFromLayout">Select %1$s by meetcode</string>
	<string name="sToolTipPopupMapLayout">Go to Map and Layout</string>
	<!-- tabs -->
	<string name="sSelAlphabeticalTab">A…Z</string>
	<string name="sSelLinesTab">Lines</string>
	<string name="sSelRecentTab">Recent</string>
	<!-- dialogs -->
	<string name="sPrefTitle">Preferences</string>
	<string name="sPrefCatMain">Main</string>
	<string name="sPrefCatData">Data</string>
	<string name="sPrefCatOther">Other</string>
	<string name="sPrefNaviType">Navigation type</string>
	<string name="sPrefNaviTypeSummary">Navigation type affects routing</string>
	<string name="sPrefNaviTypeTitle">Select navigation type</string>
	<string name="sPrefWheelBaseSize">Width between wheels</string>
	<string name="sPrefWheelBaseSizeSummary">The distance between wheels (cm)</string>
	<string name="sPrefWheelBaseSizeTitle">Set width between wheels (cm)</string>
	<string name="sPrefCarriageSize">Wheelchair/stroller width</string>
	<string name="sPrefCarriageSizeSummary">Wheelchair/stroller width (cm)</string>
	<string name="sPrefCarriageSizeTitle">Set max wheelchair/stroller width (cm)</string>
	<string name="sPrefDataPath">Download data URL</string>
	<string name="sPrefDataPathSummary">Set download routing data URL</string>
	<string name="sPrefDataPathTitle">Set download data URL</string>
	<string name="sPrefUpdDataTitle">Update data</string>
	<string name="sPrefChangeCityBasesTitle">Add/Remove city</string>
	<string name="sPrefChangeCityBasesBtn">Change</string>
    <string name="sPrefLegend">Legend</string>
    <string name="sPrefLegendSummary">Legend for station layout</string>
	<string name="sPrefCity">Current city</string>
	<string name="sPrefCityTitle">Choose city from the list</string>
	<string name="sPrefCityLoc">Language</string>
	<string name="sPrefCityLocSummary">Choose language</string>
	<string name="sPrefCityLocTitle">Choose language for names</string>
	<string name="sPrefReportWiFi">Reports by Wi-Fi</string>
	<string name="sPrefReportWiFiSummary">Send reports by Wi-Fi only</string>
	<string name="stationFilterHintText">Start entering name of the station</string>
    <string name="sPrefGA">Enable Google Analytics</string>
    <string name="sPrefGASum">Collects data to enhance app performance</string>
    <string name="sLimitationsInfo">Turn this mode on to see additional information about barriers on the route and station layouts.</string>
    <string name="sLimitationsHelp">Official assistance</string>
    <string name="sLimitationsHelpDialog">Assistance service of %s</string>
    <string name="sLimitationsPhone">Phone:</string>
    <string name="sLimitationsService">Service hours: %s</string>
    <string name="sLimitationsWork">Work hours: %s</string>
    <string name="sLimitationsRequest">Request assistance %s in advance</string>
    <string name="sLimitationsSource">Source: %s</string>
    <string name="sLimitationsHelpNoInfo">There is no info yet</string>
    <string name="sNaviTypeAll">All</string>
    <string name="sNaviTypeDisabled">Disabled</string>
    <string name="sNaviTypeLuggage">Luggage</string>

    <string name="sReportInfo">Here you can let us know about errors on station layouts, new information or access problems.</string>
    <string name="sReportMenu">Send report</string>
    <string name="sReportCategory">Category</string>
    <string name="sReportBody">Message<sup>*</sup></string>
    <string name="sReportBodyHint">Enter message text</string>
    <string name="sReportEmail">Email</string>
    <string name="sReportEmailHint">To get a reply</string>
    <string name="sReportPhotos">Photos</string>
    <string name="sReportSend">Send</string>
    <string name="sReportDefineArea">Mark on layout</string>
    <string name="sReportRedefineArea">Change mark on layout</string>
    <string name="sReportDefineAreaTooltip">Tap to select reported area</string>
    <string name="sReportTextNotNull">Please enter text message</string>
    <string name="sReportCityNotNull">Please load and select at least one city</string>
    <string name="sReportPhotoAdd">Add photo</string>
    <string name="sReportPhotoRemove">Remove</string>
    <string name="sReportPhotoTake">Take new photo</string>
    <string name="sReportPhotoPick">Pick existing one</string>
    <string name="sReportPhotoPickFail">Can\'t attach photo</string>
    <string name="sReportSending">Sending report…</string>
    <string name="sReportSent">Report sent. Thank you!</string>
    <string name="sReportSentFail">Can\'t send report now, it\'ll be sent later</string>
    <string name="sReportWaiting">reports waiting to be sent</string>
    <string name="sReportCatInfo">Information</string>
    <string name="sReportCatError">Error</string>
    <string name="sReportCatMobReq">Access problem</string>
    <string name="sReportSaveEmail">Remember</string>
    <string name="sReportIncorrectEmail">Email is incorrect!</string>

    <string name="sIOError">Media storage is not available</string>

    <string name="sTimeUnitHour">h</string>
    <string name="sTimeUnitMinute">min</string>

	<string name="switch_on">On</string>
	<string name="switch_off">Off</string>
</resources>
