<?xml version="1.0" encoding="utf-8"?>
<!--
    Project:  Metro4All
    Purpose:  Routing in subway.
    Author:   Baryshnikov Dmitriy aka Bishop (polimax@mail.ru)
    Author:   Stanislav Petriakov, becomeglory@gmail.com
    Copyright (C) 2013-2015 NextGIS

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/sPrefTitle">

    <PreferenceCategory
        android:key="data_cat"
        android:title="@string/sPrefCatMain">
        <ListPreference
            android:dialogTitle="@string/sPrefCityTitle"
            android:key="city"
            android:title="@string/sPrefCity"
            />
        <ListPreference
            android:dialogTitle="@string/sPrefCityLocTitle"
            android:entries="@array/locales"
            android:entryValues="@array/locales_val"
            android:key="city_lang"
            android:summary="@string/sPrefCityLocSummary"
            android:title="@string/sPrefCityLoc"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="other_cat"
        android:title="@string/sPrefCatOther">
        <!-- ListPreference
            android:key="user_type"
            android:title="@string/sPrefNaviType"
            android:summary="@string/sPrefNaviTypeSummary"
            android:defaultValue="1"
            android:entries="@array/navi_type"
            android:entryValues="@array/navi_type_val"
            android:dialogTitle="@string/sPrefNaviTypeTitle" /-->
        <Preference
            android:key="legend"
            android:title="@string/sPrefLegend"/>

        <!--<Preference-->
            <!--android:title="@string/sLimits">-->
            <!--<intent-->
                <!--android:targetPackage="com.nextgis.metroaccess"-->
                <!--android:targetClass="com.nextgis.metroaccess.LimitationsActivity"/>-->
        <!--</Preference>-->

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="reports_wifi"
            android:title="@string/sPrefReportWiFi"
            />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="ga_enabled"
            android:summary="@string/sPrefGASum"
            android:title="@string/sPrefGA"
            />
    </PreferenceCategory>
</PreferenceScreen>
