<?xml version="1.0" encoding="utf-8"?>
<!--
	Project:  Metro4All
 	Purpose:  Routing in subway
    Authors:  Stanislav Petriakov, becomeglory@gmail.com
    Copyright (C) 2015 NextGIS

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/btn_reverse"
        android:icon="@drawable/ic_swap_vert_white_24dp"
        android:orderInCategory="0"
        android:title="@string/sLocate"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/btn_locate"
        android:icon="@drawable/ic_action_location_found"
        android:orderInCategory="10"
        android:title="@string/sLocate"
        app:showAsAction="always"/>
    <item
        android:id="@+id/btn_settings"
        android:title="@string/sSettings"
        android:orderInCategory="20"
        app:showAsAction="never"/>
    <item
        android:id="@+id/btn_limitations"
        android:title="@string/sLimits"
        android:orderInCategory="30"
        app:showAsAction="never"/>
    <item
        android:id="@+id/btn_report"
        android:title="@string/sReportMenu"
        android:orderInCategory="40"
        app:showAsAction="never"/>
    <item
        android:id="@+id/btn_about"
        android:title="@string/sAbout"
        android:orderInCategory="50"
        app:showAsAction="never"/>

</menu>